--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     function androidDownload() {
         var winRef = window.open("", "_self");
-        winRef.location = './hkzj0422.apk';//android包的地址
+        winRef.location = '';//android包的地址
     }
     function androidDownload2() {
         var winRef = window.open("", "_self");
