--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="title">慧康之家</div>
         <div class="min-title">APP下载</div>
         <div class="tips-box">
-            您好，目前app正在维护中，维护预计时间：2小时，给您带来不变敬请谅解，稍后关闭重新打开即可！（2025年5月8日 10：00）
+            您好，目前app正在维护中，维护预计时间：2小时，给您带来不便敬请谅解，稍后关闭重新打开即可！（2025年5月8日 10：00）
         </div>
         <!--            <div class="icon-wrap">-->
         <!--                <img id="icon-src" src="logo-icon.png">-->
