--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="title">慧康之家</div>
         <div class="min-title">APP下载</div>
         <div class="tips-box">
-            您好，目前app已恢复正常关闭重新打开即可,给您带来不便敬请谅解！
+            您好，目前app已恢复正常，关闭重新打开即可,给您带来不便敬请谅解！
         </div>
         <!--            <div class="icon-wrap">-->
         <!--                <img id="icon-src" src="logo-icon.png">-->
